--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
     <title>Vite App</title>
   </head>
   <body>
+    <h1>Enjoy The View</h1>
     <div id="app"></div>
-    <button id="button">Click</button>
+    <button id="button">Click Here</button>
+    <h2>To change the view</h2>
     <script type="module" src="/main.js"></script>
   </body>
 </html>
